@@ -135,6 +135,8 @@ Licensed under the terms of the MIT License
 
 Licenced under the terms of the SIL Open Font License and MIT License
 
+**[highlight.js](https://highlightjs.org/)**
 
+Licensed under the terms of the BSD License
 
 Copyright (c) 2001-2015 Thorsten Rinne and the phpMyFAQ Team
